# payment-control-a-fabrica

./: .env  .gitignore  README.md  cli.py  data_classes.py  logger.py  main.py  pyproject.toml
config/: splitwise_config.py
core/: __init__.py  data_classes.py  enum_classes.py
data_access/: __init__.py  csv_contacts.py  csv_manager.py  mercado_pago.py  splitwise.py  splitwise_config.py
external_services/: __init__.py  mercado_pago.py  whatsapp_api.py
