[project]
name = "payment-control-a-fabrica"
version = "0.1.0"
description = "The main goal is to automate payments made at the Fábrica."
authors = [
    {name = "Felipe Monteiro"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "splitwise (>=3.0.0,<4.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "mercadopago (>=2.3.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

packages = [
    { include = "payment_control_a_fabrica" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
